Caramelo Fonts - Cambios de nombre en inicio

--- a/index.html
+++ b/index.html
@@ -2,47 +2,30 @@
 <html xmlns="http://www.w3.org/1999/xhtml" class="no-js">
 <head>
     <title>Caramelo!</title>
-
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-
     <!-- For Enabling Responsiveness In Mobile Devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Preloader Styles [must be placed here or top]-->
     <link href="css/preloader.css" rel="stylesheet" />
     <script src="plugins/pace/pace.min.js"></script>
-
-
-
-    <!-- Bootstrap 3 Css -->
     <link href="css/bootstrap.css" rel="stylesheet" />
-
     <!-- Font-Awesome -->
     <link href="css/font-awesome.css" rel="stylesheet" />
-
     <!-- Seo-Icons -->
     <link href="css/seo-icons.css" rel="stylesheet" />
-
     <!-- Master Css File Also Containing Theme Preferences -->
     <!-- Replace With Any theme file YOu Like Located Inside Css Folder -->
     <link href="css/theme-default.css" rel="stylesheet" />
-
     <!-- Flex Slider Css -->
     <link href="plugins/flexSlider/flexslider.css" rel="stylesheet" />
-
     <!-- Animations -->
     <link href="css/animate.css" rel="stylesheet" />
-
     <!-- Modenizer - A future Detection library for html5 and css3 -->
     <script src="js/modernizr.js"></script>
-
-
-
-
     <!-- Google Web Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Bree+Serif|Roboto:400,300,700' rel='stylesheet' type='text/css'>
+    <!-- Caramelo Fonts-->
+    <link href="css/caramelo.css" rel="stylesheet" />
 </head>
 <body>
     <div class="page-preloader" style="display: none">
@@ -63,7 +46,6 @@
     <!-- Navbar -->
     <nav class="site-navigation navbar navbar-default navbar-fixed-top">
         <div class="navbar-header">
-
             <!-- Navbar Toggle Button When Hidden -->
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -71,160 +53,110 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-
             <!-- Brand Name -->
             <a class="navbar-brand" href="#">Initializer</a>
         </div>
 
-
         <!-- Navbar Links Container-->
         <div class="collapse navbar-collapse" id="main-nav-collapse">
-
             <!-- Navbar Links -->
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#home-screen"><i class="fa fa-home theme-color"></i>&nbsp;Home</a></li>
-                <li><a href="#services"><i class="fa fa-cog theme-color"></i>&nbsp;Services</a></li>
+                <li><a href="#home-screen"><i class="fa fa-home theme-color"></i>&nbsp;Inicio</a></li>
+                <li><a href="#services"><i class="fa fa-cog theme-color"></i>&nbsp;Servicios</a></li>
                 <li><a href="#pricing"><i class="fa fa-dollar theme-color"></i>&nbsp;Pricing</a></li>
-                <li><a href="#work"><i class="fa fa-code theme-color"></i>&nbsp;Work</a></li>
+                <li><a href="#work"><i class="fa fa-code theme-color"></i>&nbsp;Trabajos</a></li>
                 <li><a href="#features"><i class="fa fa-check-circle theme-color"></i>&nbsp;Features</a></li>
-                <li><a href="#contact"><i class="fa fa-envelope theme-color"></i>&nbsp;Contact</a></li>
+                <li><a href="#contact"><i class="fa fa-envelope theme-color"></i>&nbsp;Contacto</a></li>
             </ul>
         </div>
-
     </nav>
-
-
     <!-- Home Screen -->
     <section id="home-screen" class="home-screen full-screen">
-
-
         <!-- Icon Slider In Home Screen -->
         <div class="home-screen-slider">
             <ul class="sequence-canvas">
-
                 <!-- Frame 1 For Icon Slider -->
                 <li class="frame">
                     <div class="icon-shadow-wrap">
-                        <div class="icon"><i class="icon-seo-target-audience3"></i></div>
+                        <div class="icon"><i class="icon-caramelo-ampolleta"></i></div>
                     </div>
                 </li>
-
-
                 <!-- Frame 2 For Icon Slider -->
                 <li class="frame">
                     <div class="icon-shadow-wrap">
-                        <div class="icon"><i class="icon-seo-code-optimization3"></i></div>
+                        <div class="icon"><i class="icon-caramelo-impresora"></i></div>
                     </div>
                 </li>
-
-
-
                 <!-- Frame 3 For Icon Slider -->
                 <li class="frame">
                     <div class="icon-shadow-wrap">
                         <div class="icon"><i class="icon-seo-analityc-3"></i></div>
                     </div>
-
                 </li>
-
-
-
                 <!-- Frame 4 For Icon Slider -->
                 <li class="frame">
                     <div class="icon-shadow-wrap">
                         <div class="icon"><i class="icon-seo-mobile-marketing3"></i></div>
                     </div>
                 </li>
-
             </ul>
-
             <!-- Previous Slide Nav -->
             <a class="prev-slide home-screen-slider-nav" href="#prev-slide"><i class="fa fa-angle-left"></i></a>
-
-
             <!-- Next Slide Nav -->
             <a class="next-slide home-screen-slider-nav" href="#next-slide"><i class="fa fa-angle-right"></i></a>
-
-
             <!-- Play/Pause Button For Slider -->
             <!--<a class="play-pause-home-screen-slider home-screen-slider-nav right-align" href="#pause-slide"><i class="fa fa-pause slider-paused"></i><i class="fa fa-play slider-playing"></i></a>-->
-
         </div>
-
         <!-- Text Slider For Homescreen -->
         <div class="brand-text-slider">
             <div class="brand-text-slider-inner flexslider">
                 <ul class="slides">
-
                     <!-- Frame 1 For Text Slider -->
                     <li>
                         <h2>We Are <b>Initializer</b></h2>
                     </li>
-
-
                     <!-- Frame 2 For Text Slider -->
                     <li>
                         <h2>We Build <b>Design</b></h2>
                     </li>
-
-
                     <!-- Frame 3 For Text Slider -->
                     <li>
                         <h2>For <b>You</b></h2>
                     </li>
-
-
-
                     <!-- Frame 4 For Text Slider -->
                     <li>
                         <h2>For Your <b>Brand</b></h2>
                     </li>
-
-
                 </ul>
             </div>
         </div>
-
         <!-- Navigate To Services Link -->
         <a href="#services" class="next-screen animated fadeInUpBig"><i class="fa fa-angle-double-down"></i></a>
     </section>
-
-
     <!-- Services Section -->
     <section id="services" class="services ">
-
         <!-- Service Item Left ALigned-->
         <article class="service-item service-item-left-align">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-4"><i class="service-icon icon-seo-page-quality3" data-animation="rotateIn"></i></div>
+                    <div class="col-sm-4"><i class="service-icon icon-caramelo-ampolleta" data-animation="slideInDown"></i></div>
                     <div class="col-sm-offset-1 col-sm-7 service-content">
-
-
                         <h2 class="service-title" data-animation="fadeInRightBig">Design Quality</h2>
                         <div class="service-text" data-animation="fadeInRightBig" data-animation-delay=".2s">
                             <p>
                                 We Provide Higher Quality Design, Served More Than 543 Clients Over The Globe.
                             </p>
                         </div>
-
-
                     </div>
                 </div>
             </div>
         </article>
-
-
-
         <!-- Service Item Right ALigned-->
         <article class="service-item service-item-right-align theme-bg">
-
             <div class="container">
                 <div class="row">
                     <div class="col-sm-offset-1 col-sm-4 visible-xs"><i class="service-icon icon-seo-mobile-marketing3" data-animation="rotateIn"></i></div>
-
                     <div class="col-sm-7  service-content">
-
                         <h2 class="service-title" data-animation="fadeInLeftBig">Fully Responsive</h2>
                         <div class="service-text" data-animation="fadeInLeftBig" data-animation-delay=".2s">
                             <p>
