Redes sociales ok, falta cambiar icono de instagram

--- a/index.html
+++ b/index.html
@@ -404,26 +404,12 @@ sharing it with anyone and backing it up daily.
         <!-- Social Icons -->
         <section class="socials">
             <div class="container">
-                <a href="#socialLink" data-animation="bounceIn" data-animation-delay=".4s">
-                    <img src="assets/icons/socials/01_twitter.png" alt="socialLinkIcon" /></a>
-                <a href="#socialLink" data-animation="bounceIn" data-animation-delay=".3s">
-                    <img src="assets/icons/socials/02_facebook.png" alt="socialLinkIcon" /></a>
-                <a href="#socialLink" data-animation="bounceIn" data-animation-delay=".2s">
-                    <img src="assets/icons/socials/03_youtube.png" alt="socialLinkIcon" /></a>
-                <a href="#socialLink" data-animation="bounceIn" data-animation-delay=".1s">
-                    <img src="assets/icons/socials/04_dribbble.png" alt="socialLinkIcon" /></a>
-                <a href="#socialLink" data-animation="bounceIn">
-                    <img src="assets/icons/socials/07_linkedin.png" alt="socialLinkIcon" /></a>
-                <a href="#socialLink" data-animation="bounceIn">
-                    <img src="assets/icons/socials/09_vimeo.png" alt="socialLinkIcon" /></a>
-                <a href="#socialLink" data-animation="bounceIn" data-animation-delay=".1s">
-                    <img src="assets/icons/socials/13_pinterest.png" alt="socialLinkIcon" /></a>
-                <a href="#socialLink" data-animation="bounceIn" data-animation-delay=".2s">
-                    <img src="assets/icons/socials/14_google-plus.png" alt="socialLinkIcon" /></a>
-                <a href="#socialLink" data-animation="bounceIn" data-animation-delay=".3s">
-                    <img src="assets/icons/socials/16_flickr.png" alt="socialLinkIcon" /></a>
-                <a href="#socialLink" data-animation="bounceIn" data-animation-delay=".4s">
-                    <img src="assets/icons/socials/22_skype.png" alt="socialLinkIcon" /></a>
+                <a href="https://www.facebook.com/Caramelo.diseno/" data-animation="bounceIn" data-animation-delay=".1s">
+                    <img src="assets/icons/socials/02_facebook.png" alt="socialLinkIcon" />
+                </a>
+                <a href="https://www.instagram.com/caramelo_diseno/" data-animation="bounceIn" data-animation-delay=".2s" target="_blank">
+                    <img src="assets/icons/socials/10_instagram.png" alt="socialLinkIcon" />
+                </a>
             </div>
         </section>
         <!-- Copyright -->
